--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
+    "react-router-dom": "^6.25.1",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
